fix form input overflow atribute

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ main {
 .form-input-box {
   display: inline-block;
   white-space: nowrap;
-  overflow: hidden;
   border: 1px solid var(--secondary-light);
   border-radius: 0.4rem;
   box-shadow: 0.1rem 0.1rem 0.1rem 0rem var(--shadow-light);
